Add logged user's wallets displaying on the main page

--- a/mobile/app/src/main/res/values/strings.xml
+++ b/mobile/app/src/main/res/values/strings.xml
@@ -18,4 +18,9 @@
     <string name="info_text">*-pola wymagane.</string>
     <string name="reg_text_r">regulaminu*</string>
     <string name="reg_text_cb">Przeczytałem/am i akceptuję warunki </string>
+    <string name="go_to_wallet">Przejdź do porfela</string>
+    <string name="balance">Saldo:</string>
+    <string name="number_of_members">Liczba członków:</string>
+    <string name="owner">Właściciel:</string>
+    <string name="logout">Wyloguj się</string>
 </resources>
