--- a/mobile/app/src/main/res/values/strings.xml
+++ b/mobile/app/src/main/res/values/strings.xml
@@ -31,4 +31,11 @@
     <string name="expanses">Wydatki:</string>
     <string name="statistics">Statystyki</string>
     <string name="deleteWallet">Usuń portfel</string>
+    <string name="shop_lists">Listy zakupów</string>
+    <string name="expenses">Wydatki</string>
+    <string name="members">Członkowie</string>
+    <string name="open_chat_button">Otwórz czat</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="create">Utwórz</string>
 </resources>
