--- a/mobile/app/src/main/res/values/strings.xml
+++ b/mobile/app/src/main/res/values/strings.xml
@@ -35,7 +35,11 @@
     <string name="expenses">Wydatki</string>
     <string name="members">Członkowie</string>
     <string name="open_chat_button">Otwórz czat</string>
-    <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="create">Utwórz</string>
+    <string name="members_list_edit_btn">Edytuj listę członków</string>
+    <string name="add_wallet_label">Dodaj portfel:</string>
+    <string name="category_label">Kategoria:</string>
+    <string name="description_hint">Wpisz opis...</string>
+    <string name="name_hint">Wpisz nazwę...</string>
 </resources>
