--- a/mobile/app/src/main/res/values/strings.xml
+++ b/mobile/app/src/main/res/values/strings.xml
@@ -1,53 +1,57 @@
 <resources>
     <string name="app_name">Mobile</string>
-    <string name="log_header">Zaloguj się:</string>
-    <string name="log_button">Zaloguj się</string>
-    <string name="email_string">Email:</string>
-    <string name="password_text">Hasło:</string>
-    <string name="forget_pass_baner_text">Nie pamiętam hasła, przypomnij hasło.</string>
-    <string name="no_accout_text">Nie masz konta?</string>
+    <string name="log_in_label">Zaloguj się:</string>
+    <string name="log_in">Zaloguj się</string>
+    <string name="email_label">Email:</string>
+    <string name="password_label">Hasło:</string>
+    <string name="password_forget_text">Nie pamiętam hasła, przypomnij hasło.</string>
+    <string name="no_account_text">Nie masz konta?</string>
     <string name="sign_up_text">Zarejestruj się!</string>
-    <string name="sign_up_header">Zarejestruj się:</string>
-    <string name="sign_up_button">Zarejestruj się</string>
-    <string name="login_text_r">Login*</string>
-    <string name="password_confirm_text_r">Powtórz hasło*</string>
-    <string name="email_text_r">Email*</string>
-    <string name="password_text_r">Hasło*</string>
+    <string name="sign_up_label">Zarejestruj się:</string>
+    <string name="sign_up">Zarejestruj się</string>
+    <string name="login_required">Login*</string>
+    <string name="password_confirm_required">Powtórz hasło*</string>
+    <string name="email_required">Email*</string>
+    <string name="password_required">Hasło*</string>
     <string name="choose_image_text">Wybierz zdjęcie</string>
-    <string name="browse_text">Przeglądaj</string>
-    <string name="info_text">*-pola wymagane.</string>
-    <string name="reg_text_r">regulaminu*</string>
-    <string name="reg_text_cb">Przeczytałem/am i akceptuję warunki </string>
+    <string name="browse">Przeglądaj</string>
+    <string name="filed_required">*-pola wymagane.</string>
+    <string name="statute_required">regulaminu*</string>
+    <string name="statute_text">Przeczytałem/am i akceptuję warunki </string>
     <string name="go_to_wallet">Przejdź do porfela</string>
-    <string name="balance">Bilans:</string>
-    <string name="saldo">Saldo:</string>
-    <string name="number_of_members">Liczba członków:</string>
-    <string name="owner">Właściciel:</string>
+    <string name="balance_label">Bilans:</string>
+    <string name="saldo_label">Saldo:</string>
+    <string name="number_of_members_label">Liczba członków:</string>
+    <string name="owner_label">Właściciel:</string>
     <string name="logout">Wyloguj się</string>
     <string name="hello">Witaj</string>
-    <string name="new_wallet">Dodaj nowy portfel</string>
-    <string name="description">Opis:</string>
-    <string name="your_expanses">Twoje wydatki:</string>
-    <string name="expanses">Wydatki:</string>
+    <string name="add_new_wallet">Dodaj nowy portfel</string>
+    <string name="description_label">Opis:</string>
+    <string name="your_expanses_label">Twoje wydatki:</string>
+    <string name="expanses_label">Wydatki:</string>
     <string name="statistics">Statystyki</string>
-    <string name="deleteWallet">Usuń portfel</string>
+    <string name="delete_wallet">Usuń portfel</string>
     <string name="shop_lists">Listy zakupów</string>
     <string name="expenses">Wydatki</string>
     <string name="members">Członkowie</string>
-    <string name="open_chat_button">Otwórz czat</string>
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="open_chat">Otwórz czat</string>
     <string name="create">Utwórz</string>
-    <string name="members_list_edit_btn">Edytuj listę członków</string>
+    <string name="edit_members_list">Edytuj listę członków</string>
     <string name="add_wallet_label">Dodaj portfel:</string>
     <string name="category_label">Kategoria:</string>
     <string name="description_hint">Wpisz opis...</string>
     <string name="name_hint">Wpisz nazwę...</string>
-    <string name="login_string">Login:</string>
-    <string name="numer_of_wallets_string">Liczba portfeli:</string>
-    <string name="edit_profile_btn_string">Edytuj profil</string>
-    <string name="notifications_string">Powiadomienia</string>
-    <string name="deny_btn_string">Odrzuć</string>
-    <string name="accept_btn_string">Zaakceptuj</string>
-    <string name="go_to_expense_string">Przejdź do wydatku</string>
-    <string name="debth_string">Wysyokość należności</string>
+    <string name="login_label">Login:</string>
+    <string name="numer_of_wallets_label">Liczba portfeli:</string>
+    <string name="edit_profile">Edytuj profil</string>
+    <string name="notifications">Powiadomienia</string>
+    <string name="deny">Odrzuć</string>
+    <string name="accept">Zaakceptuj</string>
+    <string name="go_to_expense">Przejdź do wydatku</string>
+    <string name="debth">Wysyokość należności</string>
+    <string name="find_user_hint">Szukaj użytkowników...</string>
+    <string name="go_to_statue">Przejdź do regulaminu</string>
+    <string name="profil">Profil</string>
+    <string name="warning_info_text">Użytkownik przypomina Ci o uregulowaniu należności</string>
+    <string name="warning_debth">NIEUREGULOWANA NALEŻNOSC</string>
 </resources>
