--- a/mobile/app/src/main/res/values/strings.xml
+++ b/mobile/app/src/main/res/values/strings.xml
@@ -44,6 +44,7 @@
     <string name="login_label">Login:</string>
     <string name="numer_of_wallets_label">Liczba portfeli:</string>
     <string name="edit_profile">Edytuj profil</string>
+    <string name="edit_profile_label">Edytuj profil:</string>
     <string name="notifications">Powiadomienia</string>
     <string name="deny">Odrzuć</string>
     <string name="accept">Zaakceptuj</string>
@@ -54,6 +55,9 @@
     <string name="profil">Profil</string>
     <string name="warning_info_text">Użytkownik przypomina Ci o uregulowaniu należności</string>
     <string name="warning_debth">NIEUREGULOWANA NALEŻNOSC</string>
+    <string name="change_password">Zmień hasło</string>
+    <string name="delete_account">Usuń konto</string>
+    <string name="save_changes">Zapisz zmiany</string>
     <string name="statue_label">Regulamin:</string>
     <string name="statue_text_1">1. Bla bla</string>
     <string name="statue_text_2">2. Bla bla</string>
