--- a/mobile/app/src/main/res/values/strings.xml
+++ b/mobile/app/src/main/res/values/strings.xml
@@ -68,5 +68,7 @@
     <string name="repeat_new_password_label">Powtórz nowe hasło: </string>
     <string name="add_members_label">Dodaj osoby: </string>
     <string name="send_invitations">Wyślij zaproszenia</string>
+    <string name="edit_wallet">Edytuj portfel</string>
+    <string name="edit_wallet_label">Edytuj portfel:</string>
 
 </resources>
