--- a/mobile/app/src/main/res/values/strings.xml
+++ b/mobile/app/src/main/res/values/strings.xml
@@ -113,5 +113,6 @@
     <string name="who_make_label">Wykonany przez: </string>
     <string name="cost_label">Koszt: </string>
     <string name="date_label">Data:</string>
+    <string name="regulate">UREGULUJ</string>
 
 </resources>
