--- a/mobile/app/src/main/res/values/strings.xml
+++ b/mobile/app/src/main/res/values/strings.xml
@@ -114,5 +114,6 @@
     <string name="cost_label">Koszt: </string>
     <string name="date_label">Data:</string>
     <string name="regulate">UREGULUJ</string>
+    <string name="all_balance_label">Wydatki: </string>
 
 </resources>
