--- a/mobile/app/src/main/res/values/strings.xml
+++ b/mobile/app/src/main/res/values/strings.xml
@@ -115,5 +115,6 @@
     <string name="date_label">Data:</string>
     <string name="regulate">UREGULUJ</string>
     <string name="all_balance_label">Wydatki: </string>
+    <string name="your_balance_label">Twój bilans:</string>
 
 </resources>
