--- a/mobile/app/src/main/res/values/strings.xml
+++ b/mobile/app/src/main/res/values/strings.xml
@@ -49,7 +49,7 @@
     <string name="deny">Odrzuć</string>
     <string name="accept">Zaakceptuj</string>
     <string name="go_to_expense">Przejdź do wydatku</string>
-    <string name="debth">Wysokość należności</string>
+    <string name="debt">Wysokość należności:</string>
     <string name="find_user_hint">Szukaj użytkowników...</string>
     <string name="go_to_statue">Przejdź do regulaminu</string>
     <string name="profil">Profil</string>
