Delete wallet and delete member from wallet

--- a/mobile/app/src/main/res/values/strings.xml
+++ b/mobile/app/src/main/res/values/strings.xml
@@ -117,5 +117,6 @@
     <string name="all_balance_label">Wydatki: </string>
     <string name="your_balance_label">Twój bilans:</string>
     <string name="delete_notification">Usuń przypomnienie</string>
+    <string name="leave_wallet">Opuść portfel</string>
 
 </resources>
