Change error message

--- a/backend/src/main/resources/messages.properties
+++ b/backend/src/main/resources/messages.properties
@@ -55,3 +55,5 @@ expense.totalCost.digits=Całkowty koszt wydatku nie może być większy od 9999
 
 mail.subject=Usuń hasło
 mail.text=Aby zresetować hasło, kliknij link poniżej:
+
+data.error=Podane date są w niepoprawnym formacie!
