--- a/backend/src/main/resources/messages.properties
+++ b/backend/src/main/resources/messages.properties
@@ -17,7 +17,7 @@ user.oldPassword.notBlank=Stare hasło jest obowiązkowe!
 login.error=Niepoprawne dane logowania!
 
 register.confirmPassword=Podane hasła różnią się od siebie!
-register.takenCredentials=Podany user ma już konto!
+register.takenCredentials=Podany użytkownik ma już konto!
 
 forgotPassword.email.error=Adres email powinien mieć następujący format - example@gmail.com, oraz powinien zawierać od 5 do 100 znaków!
 forgotPassword.email.deletedAccount=To konto jest usunięte!
