--- a/backend/src/main/resources/messages.properties
+++ b/backend/src/main/resources/messages.properties
@@ -46,6 +46,8 @@ wallet.name.notBlank=Nazwa portfela jest obowiązkowa!
 
 wallet.description.size=Wielkość nazwy wydatku musi mieć do 1000 znaków!
 
+wallet.deleteUser=Nie można usunąć użytkownika z portfela - nieuregulowany dług!
+
 expense.name.size=Nazwa wydatku jest obowiązkowa!
 expense.name.notBlank=Nazwa wydatku jest obowiązkowa!
 
