Change error message

--- a/backend/src/main/resources/messages.properties
+++ b/backend/src/main/resources/messages.properties
@@ -48,6 +48,8 @@ wallet.description.size=Wielkość nazwy wydatku musi mieć do 1000 znaków!
 
 wallet.deleteUser=Nie można usunąć użytkownika z portfela - nieuregulowany dług!
 
+wallet.stats=Podaj poprawny przedział czasowy!
+
 expense.name.size=Nazwa wydatku jest obowiązkowa!
 expense.name.notBlank=Nazwa wydatku jest obowiązkowa!
 
