--- a/backend/src/main/resources/messages.properties
+++ b/backend/src/main/resources/messages.properties
@@ -60,4 +60,4 @@ expense.totalCost.digits=Całkowty koszt wydatku nie może być większy od 9999
 mail.subject=Usuń hasło
 mail.text=Aby zresetować hasło, kliknij link poniżej:
 
-data.error=Podane date są w niepoprawnym formacie!
+data.error=Podane daty są w niepoprawnym formacie!
