Edit column properties

--- a/backend/src/main/resources/messages.properties
+++ b/backend/src/main/resources/messages.properties
@@ -38,8 +38,9 @@ shoppingList.name.notBlank=Nazwa listy zakupów jest obowiązkowa!
 listDetail.name.size=Wielkość nazwy produktu musi mieć od 1 do 100 znaków!
 listDetail.name.notBlank=Nazwa produktu jest obowiązkowa!
 
-listDetail.quantity.size=Wielkość nazwy ilości produktu musi mieć od 1 do 100 znaków!
-listDetail.quantity.notBlank=Ilość protuktu jest obowiązkowa!
+listDetail.quantity.notNull=Ilość produktu jest obowiązkowa!
+listDetail.quantity.decimalMin=Ilość produktu musi być większa od 0!
+listDetail.quantity.digits=Ilość produktu nie może być większa od 99999,999!
 
 wallet.name.size=Wielkość nazwy wydatku musi mieć od 1 do 45 znaków!
 wallet.name.notBlank=Nazwa portfela jest obowiązkowa!
