Change the validation of an account and an email

--- a/backend/src/main/resources/messages.properties
+++ b/backend/src/main/resources/messages.properties
@@ -30,6 +30,8 @@ changePassword.oldPassword=Stare hasło jest błędne!
 deleteAccount.password=Podane hasło jest błędne!
 deleteAccount.error=Nie możesz usunąć konta!
 
+account.error=Nie istnieje konto z podanym adresem email!
+
 image.type=Wybierz odpowiedni typ pliku - jpg, jpeg, png!
 
 shoppingList.name.size=Wielkość nazwy listy zakupów musi mieć od 1 do 45 znaków!
