--- a/backend/src/main/resources/messages.properties
+++ b/backend/src/main/resources/messages.properties
@@ -60,7 +60,7 @@ expense.totalCost.notNull=Całkowity koszt wydatku jest obowiązkowy!
 expense.totalCost.decimalMin=Całkowity koszt wydatku musi być większy od 0!
 expense.totalCost.digits=Całkowty koszt wydatku nie może być większy od 99999999,99!
 
-mail.subject=Usuń hasło
+mail.subject=Przypomnienie hasła
 mail.text=Aby zresetować hasło, kliknij link poniżej:
 
 data.error=Podane daty są w niepoprawnym formacie!
