Change error messages

--- a/backend/src/main/resources/messages.properties
+++ b/backend/src/main/resources/messages.properties
@@ -9,6 +9,7 @@ user.email.regexp=Adres email powinien mieć następujący format - example@gmai
 user.password.notBlank=Hasło jest obowiązkowe!
 user.password.regexp=Niepoprawny format hasła - musi zawierać małą i dużą literę oraz cyfrę!
 user.password.size=Hasło powinno zawierać od 8 do 50 znaków!
+user.password.error=Podaj poprawne hasło!
 
 user.confirmPassword.notBlank=Potwierdzenie hasła jest obowiązkowe!
 
