Change error messages

--- a/backend/src/main/resources/messages.properties
+++ b/backend/src/main/resources/messages.properties
@@ -64,4 +64,4 @@ expense.totalCost.digits=Całkowty koszt wydatku nie może być większy od 9999
 mail.subject=Przypomnienie hasła
 mail.text=Aby zresetować hasło, kliknij link poniżej:
 
-data.error=Podane daty są w niepoprawnym formacie!
+data.error=Podano błędne dane!
