Edit error message

--- a/backend/src/main/resources/messages.properties
+++ b/backend/src/main/resources/messages.properties
@@ -65,3 +65,5 @@ mail.subject=Przypomnienie hasła
 mail.text=Aby zresetować hasło, kliknij link poniżej:
 
 data.error=Podano błędne dane!
+
+image.tooBig=Rozmiar zdjęcia jest za duży (max. 5MB)!
