Edit error messages

--- a/backend/src/main/resources/messages.properties
+++ b/backend/src/main/resources/messages.properties
@@ -67,3 +67,5 @@ mail.text=Aby zresetować hasło, kliknij link poniżej:
 data.error=Podano błędne dane!
 
 image.tooBig=Rozmiar zdjęcia jest za duży (max. 5MB)!
+
+message.error.content=Wiadomość powinna mieć 1-255 znaków!
